syntax = "proto3";

package examples.hello.v1;

option go_package = "github.com/3s-rg-codes/HyperFaaS/functions/go/hello/pb";

service Hello {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
}

message HelloReply {
  string message = 1;
}

